--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -254,7 +254,37 @@ body {
 
 
 
+/* RECIPE */
+.recipe-header {
+  text-align: center;
+  color: #28832b;
+}
 
+.input-box {
+  text-align: center;
+  margin: 0 auto;
+  padding-bottom: 1em;
+}
+
+.recipe-card {
+  margin: 0 auto;
+  text-align: center;
+}
+
+.recipe-card h4{
+  opacity: 0.7;
+  padding: 0em;
+}
+
+.recipe-card img{
+  width: 300px; 
+  height: 200px;
+  object-fit: cover;
+  border-radius: 12px;
+  display: block;
+  margin: 0 auto;
+  border: 4px solid #19521c;
+}
 
 /* DASHBOARD HEADER ANIMATION */
 .dashboard-header h1 {
