--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -272,9 +272,13 @@ body {
   font-size: 1rem;
 }
 
-.recipe-card {
+.recipe-container {
+  width: 80%;
   margin: 0 auto;
   text-align: center;
+  border: 4px solid rgba(0,0,0,0.5);
+  padding:20px;
+  border-radius: 12px;
 }
 
 .recipe-card h4{
