--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -296,6 +296,10 @@ body {
   border: 4px solid #19521c;
 }
 
+.button-list button{
+  margin: 1em;
+}
+
 /* DASHBOARD HEADER ANIMATION */
 .dashboard-header h1 {
   background: linear-gradient(45deg, #ff8a00, #e52e71, #2575fc);
