--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -699,3 +699,146 @@ body {
     background: #b3ee8c;
     transform: translateY(-2px);
 }
+
+
+
+
+
+
+
+
+/* RECIPE DETAILS PAGE */
+.recipe-details-container {
+  width: 100%;
+  max-width: 900px;
+  padding: 2rem;
+  border-radius: 16px;
+  background: rgba(221, 227, 229, 0.762);
+  margin: 50px auto;
+}
+
+.back-btn {
+  padding: 0.5rem 1rem;
+  background: #e8f5e9;
+  color: #2e7d32;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-bottom: 1.5rem;
+  font-weight: 600;
+  transition: all 0.3s ease;
+}
+
+
+.back-btn:hover {
+  background: #c8e6c9;
+  transform: translateY(-3px);
+}
+
+.recipe-header {
+  text-align: center;
+  margin-bottom: 2rem;
+}
+
+.recipe-header h1{
+  
+  margin-top:0;
+}
+
+.recipe-info {
+  display: flex;
+  justify-content: center;
+  gap: 1.5rem;
+  color: #4a4a4a;
+  font-size: 1.2rem;
+}
+
+
+.recipe-content {
+  background: white;
+  padding: 1.5rem;
+  border-radius: 8px;
+}
+
+
+.recipe-section {
+  margin-bottom: 2rem;
+}
+
+.recipe-section h2 {
+  color: #2e7d32;
+  border-bottom: 2px solid #e0e0e0;
+  padding-bottom: 0.5rem;
+  margin-bottom: 1rem;
+}
+
+/* display ingredients in formatted rows and columns */
+.ingredients-list {
+  list-style: none;
+  padding: 0;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 0.5rem;
+}
+
+.ingredients-list li {
+  background: #f5f5f5;
+  padding: 0.5rem 1rem;
+  border-radius: 4px;
+  margin-bottom: 0.5rem;
+  transition: 0.3s;
+  text-align: center;
+}
+
+.ingredients-list li:hover {
+  background-color: #ade8b0;
+  cursor: crosshair;
+}
+
+.instructions-list {
+  padding-left: 1.5rem;
+}
+
+.instructions-list li {
+  margin-bottom: 1rem;
+  padding-left: 0.5rem;
+}
+
+
+
+/* MEAL PLAN TAB: meal link buttons */
+.meal-items {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.meal-item {
+  margin: 0.25rem 0;
+  display: inline-block; 
+}
+
+.meal-link {
+  display: inline-block;
+  padding: 0.5rem 1rem;
+  /* background-color: #e8f5e9; */
+  /* color: #2e7d32; */
+  border: 1px solid #b9c5b1;
+  border-radius: 6px;
+  cursor: pointer;
+  text-decoration: none;
+  font-weight: 500;
+  transition: all 0.3s ease;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+  margin: 5px;
+}
+
+.meal-link:hover {
+  background-color: #dcedc8;
+  color: #1b5e20;
+  transform: translateY(-2px);
+  box-shadow: 0 2px 5px rgba(0,0,0,0.15);
+}
