--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -272,12 +272,21 @@ body {
   font-size: 1rem;
 }
 
+.recipe-box{
+  width: 100%;
+  max-width: 1500px;
+  padding: 2rem;
+  border-radius: 16px;
+  background: rgba(221, 227, 229, 0.762);
+  text-align: center;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+  margin: 50px 0;
+}
+
 .recipe-container {
   width: 50%;
   margin: 0 auto;
   text-align: center;
-  flex: 1 1 300px;
-  display: flex;
 }
 
 .recipe-card{
@@ -572,6 +581,14 @@ body {
   margin: 50px 0;
   text-align: left;
   align-items: stretch;
+}
+
+.mealplan-recipes {
+  width: 50%;
+  margin: 0 auto;
+  text-align: center;
+  flex: 1 1 300px;
+  display: flex;
 }
 
 .day-header{
