--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1241,3 +1241,107 @@ body {
   opacity: 0.5;
   cursor: not-allowed;
 }
+
+
+
+
+/* RECIPE CARD STYLING */
+.recipe-cards-container {
+  display: grid;
+  /* columns for recipes */
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+  gap: 2rem;
+  margin-top: 2rem;
+  padding: 1rem;
+}
+
+.recipe-card {
+  background: white;
+  border-radius: 12px;
+  overflow: hidden;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease;
+  border: 1px solid #e0e0e0;
+}
+
+.recipe-card:hover {
+  transform: translateY(-8px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
+}
+
+.recipe-image-container {
+  width: 100%;
+  height: 200px;
+}
+
+.recipe-image {
+  width: 100%;
+  height: 100%;
+}
+
+
+.recipe-title {
+  color: #1a571d;
+  font-size: 1.5rem;
+  margin: 0 0 0.5rem 0;
+  font-weight: 600;
+  padding-bottom: 10px;
+}
+
+
+.recipe-type, .recipe-time {
+  background: #e8f5e9;
+  padding: 0.25rem 0.75rem;
+  border-radius: 100px;
+  color: #2e7d32;
+  font-weight: 500;
+  margin: 20px;
+}
+
+
+.recipe-details h4 {
+  color: #2e7d32;
+  margin: 0.8rem 0;
+  font-size: 1.4rem;
+  font-weight: 600;
+}
+
+.recipe-ingredients {
+  color: #4b5563;
+  line-height: 1.5;
+  margin-bottom: 1rem;
+}
+
+/* .recipe-instructions li {
+  margin-bottom: 0.5rem;
+} */
+
+
+
+.save-recipe-btn {
+  padding: 0.75rem 1.5rem;
+  background: linear-gradient(to right, #8bc34a, #4caf50);
+  color: white;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  font-weight: 600;
+  transition: all 0.5s ease;
+  box-shadow: 0 2px 4px rgba(76, 175, 80, 0.3);
+}
+
+.save-recipe-btn:hover {
+  transform: translateY(3px);
+  box-shadow: 0 4px 8px rgba(76, 175, 80, 0.3);
+  background: linear-gradient(to right, #65ab16, #0c690f);
+
+}
+
+
+.day-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+  gap: 2rem;
+  margin: 2rem 0;
+  width: 100%;
+}
