--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -168,12 +168,12 @@ body {
 /* view recipe details */
 .view-btn {
   padding: 0.5rem 1rem;
-  background: #8bc34a;
+  background: #8dc252;
   color: white;
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  margin-top: 0.5rem;
+  margin-top: 1rem;
 }
 
 .view-btn:hover {
@@ -315,10 +315,16 @@ body {
 }
 
 .recipe-card{
+  display: flex;
+  flex-direction: column;
   border: 4px solid rgba(0,0,0,0.5);
   padding:20px;
   border-radius: 12px;
   margin: 20px;
+  height: 100%;
+  position: relative;
+  min-height: 500px;
+
 }
 .recipe-card h4{
   opacity: 0.7;
@@ -337,6 +343,7 @@ body {
 
 .button-list button{
   margin: 1em;
+  margin-bottom: 2em;
 }
 
 /* DASHBOARD HEADER ANIMATION */
@@ -625,6 +632,8 @@ body {
 
 .day-header{
   border-bottom: 2px solid rgba(0,0,0,0.8);
+  padding-bottom: 0.5rem;
+  border-bottom: 2px solid #2e7d32;
 
 }
 .center-btn{
@@ -841,6 +850,19 @@ body {
   background: white;
   padding: 1.5rem;
   border-radius: 8px;
+  flex-grow:1;
+  position: relative; 
+  display:flex;
+  flex-direction: column;
+  flex:1;
+}
+
+.recipe-actions {
+  margin-top: auto;  
+  padding-top: 1rem;
+  bottom: 30px;
+  display: flex;
+  justify-content: center;
 }
 
 
@@ -961,12 +983,12 @@ body {
 }
 
 #empty-text {
-  padding: 20px;
+  /* padding: 20px; */
   font-size: 1.5rem;
   font-family: 'Poppins', sans-serif;
   color: rgb(5, 103, 70);
   font-weight: 600;
-
+  padding-top:20px;
 }
 
 .fridge-header p{
@@ -1342,6 +1364,6 @@ body {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
   gap: 2rem;
-  margin: 2rem 0;
-  width: 100%;
+  margin-bottom: 3rem;
+  align-items: stretch;
 }
